--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+platform:
+- map all the keys
+- gamepad input
+- migrate all objective-c code to zig using zig-objcrt
+- audio output
+
 graphics:
 - generalise graphics.writeUniform / use UBOs with opengl so can map to d3d11 too
 - support multiple render targets i.e. implement graphics.setRenderTarget
@@ -8,3 +14,4 @@ graphics:
 - remove libepoxy dependency
 - implement destroyViewLayout
 - implement destroyShaderProgram
+- implement metal backend
