--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ platform:
 - win32: update while moving window or resizing
 
 graphics:
+- solid colour shader: gamma correction
 - support multiple render targets i.e. implement graphics.setRenderTarget
 - persistently mapped buffers (i.e. ARB_buffer_storage) instead of mapping/unmapping buffers
 - (sparse) bindless texture arrays
