--- a/TODO
+++ b/TODO
@@ -1,18 +1,25 @@
+001_funky_triangle:
+- use graphics module to debug print frame stats to screen
+
 platform:
-- map all the keys
-- gamepad input
-- migrate all objective-c code to zig using zig-objcrt
-- audio output
+- linux: map all the keys
+- macOS: OpenGL -> Metal context
+- macOS: key and mouse events
+- win32: key and mouse events
 - win32: update while moving window or resizing
+- gamepad input
+- migrate all objective-c code to zig
+- audio output
 
 graphics:
-- solid colour shader: gamma correction
+- premultiplied alpha
+- metal backend
+- remove libepoxy dependency
 - support multiple render targets i.e. implement graphics.setRenderTarget
 - persistently mapped buffers (i.e. ARB_buffer_storage) instead of mapping/unmapping buffers
 - (sparse) bindless texture arrays
 - shared UBOs, partial support already in openGL backend - how to map to d3d11???
 - ARB_multi_draw_indirect
-- remove libepoxy dependency
 - implement destroyViewLayout
 - implement destroyShaderProgram
 - implement destroyConstantBuffer
