--- a/TODO
+++ b/TODO
@@ -2,14 +2,14 @@ platform:
 - linux: query monitor refresh and adjust target framerate accordingly
 - win32: query monitor refresh, adjust target framerate accordingly & set appropriate sync interval
 - macOS: hook up CADisplayLink for proper display sync 
-- linux: map all the keys
 - macOS: OpenGL -> Metal context
 - macOS: key and mouse events
 - win32: key and mouse events
 - win32: update while moving window or resizing
 - all: gamepad input
 - macos: migrate all objective-c code to zig
-- all: audio output
+- linux: audio output (started alsa backend in dev-alsa branch)
+- macOS: audio output
 
 graphics:
 - DebugGUI: move text cursor with arrow keys
